--- a/note_styles.css
+++ b/note_styles.css
@@ -1,25 +1,110 @@
 html {
     margin-bottom: 3%;
 }
-body {
+
+.dark-theme {
     color: white;
     background-color: black;
+    border-color: white;
+}
+
+.dark-theme table th {
+    border: white;
+}
+
+body {
     width: 50%;
     margin-left: auto;
     margin-right: auto;
     font-size: 24px;
 }
+
 img {
     display: block;
     margin: auto;
 }
+
 table {
     margin: auto;
     border-collapse: collapse;
     border-style: solid;
-    border-color: white;
 }
-table td, table th {
-    border: 1px solid white;
+
+table td,
+table th {
+    border: 1px solid;
     padding: 15px;
+}
+
+nav {
+    padding-top: 5px;
+    /* position: fixed; */
+    /* height: 100%; */
+    /* width: 100%; */
+    /* top: 0; */
+    /* left: 10; */
+    /* overflow: hidden; */
+}
+
+/* The switch - the box around the slider */
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+/* The slider */
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked+.slider {
+    background-color: #2196F3;
+}
+
+input:focus+.slider {
+    box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked+.slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
 }
