--- a/internal/note_styles.css
+++ b/internal/note_styles.css
@@ -38,12 +38,6 @@ table th {
 
 nav {
     padding-top: 5px;
-    /* position: fixed; */
-    /* height: 100%; */
-    /* width: 100%; */
-    /* top: 0; */
-    /* left: 10; */
-    /* overflow: hidden; */
 }
 
 /* The switch - the box around the slider */
@@ -107,4 +101,59 @@ input:checked+.slider:before {
 
 .slider.round:before {
     border-radius: 50%;
+}
+.jump-to-top-button {
+    display: block;
+    margin: auto;
+    text-align: center;
+}
+.jump-to-top-button button {
+    top: 50%;
+    cursor: pointer;
+    appearance: none;
+    background-color: transparent;
+    border: 2px solid #1A1A1A;
+    border-radius: 15px;
+    box-sizing: border-box;
+    color: #3B3B3B;
+    cursor: pointer;
+    display: inline-block;
+    font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+    font-size: 16px;
+    font-weight: 600;
+    line-height: normal;
+    margin: 0;
+    min-height: 60px;
+    min-width: 0;
+    outline: none;
+    padding: 16px 24px;
+    text-align: center;
+    text-decoration: none;
+    transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    width: 100%;
+    will-change: transform;
+}
+.dark-theme .jump-to-top-button button {
+    background-color: transparent;
+    border: 2px solid #c8cacc;
+    color: #d1d1d1;
+}
+
+.jump-to-top-button button:disabled {
+  pointer-events: none;
+}
+
+.jump-to-top-button button:hover {
+  color: #fff;
+  background-color: #1A1A1A;
+  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+  transform: translateY(-2px);
+}
+
+.jump-to-top-button button:active {
+  box-shadow: none;
+  transform: translateY(0);
 }
