--- a/internal/note_styles.css
+++ b/internal/note_styles.css
@@ -4,7 +4,7 @@ html {
 
 .dark-theme {
     color: white;
-    background-color: black;
+    background-color: #1f1f1f;
     border-color: white;
 }
 
@@ -12,11 +12,36 @@ html {
     border: white;
 }
 
+/* .table-of-contents { */
+/**/
+/* } */
+/**/
+/* .dark-theme .table-of-contents { */
+/**/
+/* } */
+
 body {
     width: 50%;
     margin-left: auto;
     margin-right: auto;
     font-size: 24px;
+}
+
+a {
+    color: black;
+    font-style: italic;
+}
+
+.dark-theme a {
+    color: white;
+}
+
+a:hover {
+    color: gray;
+}
+
+.dark-theme a:hover {
+    color: gray;
 }
 
 img {
