--- a/internal/note_styles.css
+++ b/internal/note_styles.css
@@ -2,6 +2,11 @@ html {
     margin-bottom: 3%;
 }
 
+p {
+    text-align: justify;
+    text-justify: inter-word;
+}
+
 .dark-theme {
     color: white;
     background-color: #1f1f1f;
